<resources>
    <string name="app_name">SomeFood</string>
    <string name="txvSlogan">No importa donde estes, pide lo que se te apetezca en cualquier momento.</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    
    <string name="forgot_pwd">¿Olvidó la contraseña?</string>
    <string name="cart_txvTotal">Total:</string>
    <string name="cart_btnPlaceOrder">Realizar Pedido</string>
    <string name="detail_imvDinero">Dinero</string>
    <string name="imvLogo">logo</string>
    <string name="btnLogin">LogIn</string>
    <string name="btnSignUp">Sign Up</string>
    <string name="signup_edtPhone">Telefono</string>
    <string name="signup_edtNombre">Nombre</string>
    <string name="signup_edtPassword">Contraseña</string>
    <string name="signup_edtSecureCode">Código de Seguridad</string>
    <string name="signup_btnSignUp">Registrarse</string>
    <string name="menu_txvNombre">Nombre del menu</string>
</resources>
