<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background3"
    tools:context="com.trabajo.carlos.somefood.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/signup_edtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_edtPhone"
            android:inputType="phone"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="34sp"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="9"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/signup_edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_edtNombre"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="34sp"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/signup_edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_edtPassword"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="34sp"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/signup_edtSecureCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_edtSecureCode"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="30sp"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true" />

    </LinearLayout>

    <info.hoang8f.widget.FButton
        android:id="@+id/signup_btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp"
        android:text="@string/signup_btnSignUp"
        android:textColor="@android:color/white"
        app:fButtonColor="@color/btnSignActive"
        app:shadowColor="@android:color/black"
        app:shadowEnabled="true"
        app:shadowHeight="5dp"
        app:cornerRadius="4dp"/>

</RelativeLayout>
